Gradient background effect

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         body {
             align-items: center;
-            background: hsl(246deg 10% 18% / 100%);
+            background: linear-gradient(180deg, hsl(246.7deg 9.7% 18.2% / 100%), hsl(209.1deg 43.2% 15.9% / 100%));
             color: hsl(0deg 0% 98% / 100%);
             display: grid;
             font: 100 calc(22pt + 4vw) / 1 Inter, system-ui, sans-serif;
