Dampen text tone

--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 <head>
     <meta charset="utf-8">
     <title>New Tab</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <style>
         @font-face {
             font-display: optional;
@@ -16,7 +13,7 @@
         body {
             align-items: center;
             background: linear-gradient(180deg, hsl(246.7deg 9.7% 18.2% / 100%), hsl(209.1deg 43.2% 15.9% / 100%));
-            color: hsl(0deg 0% 98% / 100%);
+            color: hsl(220, 24%, 7% / 100%);
             display: grid;
             font: calc(22pt + 8vw) / 1 'Until I Die';
             height: 100vh;
