--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         body {
             align-items: center;
             background: linear-gradient(180deg, hsl(246.7deg 9.7% 18.2% / 100%), hsl(209.1deg 43.2% 15.9% / 100%));
-            color: hsl(220, 24%, 7% / 100%);
+            color: hsl(220deg 24% 7% / 100%);
             display: grid;
             font: calc(22pt + 8vw) / 1 'Until I Die';
             height: 100vh;
