--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <style>
         @font-face {
             font-display: optional;
-            font-family: 'Until I Die';
-            src: url('untilidie.woff2') format('woff2');
+            font-family: 'Braunschweig';
+            src: url('braunschweig.ttf') format('truetype');
         }
 
         body {
@@ -15,7 +15,7 @@
             background: linear-gradient(180deg, hsl(246.7deg 9.7% 18.2% / 100%), hsl(209.1deg 43.2% 15.9% / 100%));
             color: hsl(220deg 24% 7% / 100%);
             display: grid;
-            font: calc(22pt + 8vw) / 1 'Until I Die';
+            font: calc(22pt + 8vw) / 1 'Braunschweig';
             height: 100vh;
             justify-items: center;
             margin: 0;
