--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>New Tab</title>
     <style>
         @font-face {
-            font-display: optional;
+            font-display: swap;
             font-family: 'Braunschweig';
             src: url('braunschweig.ttf') format('truetype');
         }
