--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" background="hsl(209.1deg 43.2% 15.9% / 100%)">
 <head>
     <meta charset="utf-8">
     <title>New Tab</title>
